<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>org.lecturestudio</groupId>
	<artifactId>lect-studio</artifactId>
	<version>4.0.0</version>

	<packaging>pom</packaging>

	<description>
		An integrated tool for presenting lectures. Supports interactive annotation of slides, audio/video recording/streaming, class-room response (quizzes) and much more.
	</description>
	<url>https://www.lecturestudio.org</url>

	<developers>
		<developer>
			<id>a.andres</id>
			<name>Alex Andres</name>
			<email>andres.alex@pm.me</email>
		</developer>
	</developers>

	<licenses>
		<license>
			<name>GNU General Public License, Version 3.0</name>
			<url>https://www.gnu.org/licenses/gpl-3.0.txt</url>
			<distribution>manual</distribution>
			<comments>A free, copyleft license for software and other kinds of works.</comments>
		</license>
	</licenses>

	<issueManagement>
		<system>GitHub</system>
		<url>https://github.com/lecturestudio/lectureStudio/issues</url>
	</issueManagement>

	<scm>
		<connection>scm:git:git://github.com/lecturestudio/lectureStudio.git</connection>
		<developerConnection>scm:git:ssh://git@github.com/lecturestudio/lectureStudio.git</developerConnection>
		<url>https://github.com/lecturestudio/lectureStudio/tree/master</url>
	</scm>

	<modules>
		<module>lect-third-party</module>
		<module>lect-core</module>
		<module>lect-swing</module>
		<module>lect-javafx</module>
<!--		<module>lect-broadcast</module>-->
		<module>lect-presenter-api</module>
<!--		<module>lect-presenter-fx</module>-->
		<module>lect-presenter-swing</module>
<!--		<module>lect-player-api</module>-->
<!--		<module>lect-player-fx</module>-->
		<module>lect-player-web</module>
		<module>lect-editor-api</module>
		<module>lect-editor-fx</module>
		<module>lect-packager</module>
		<module>lect-media</module>
		<module>lect-web-api</module>
	</modules>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<build.output.dir>${platform.name}-${platform.arch}</build.output.dir>
		<package.version>6.0.${git.commitsCount}</package.version>
		<maven.build.timestamp.format>yyyy-MM-dd HH:mm</maven.build.timestamp.format>
		<license.path>${project.basedir}/../</license.path>
		<log4j.version>2.17.1</log4j.version>
		<stylus.version>0.2.0</stylus.version>
		<java.version>17</java.version>
	</properties>

	<repositories>
		<repository>
			<id>oss-sonatype</id>
			<name>oss-sonatype</name>
			<url>https://oss.sonatype.org/content/repositories/snapshots/</url>
			<snapshots>
				<enabled>true</enabled>
			</snapshots>
		</repository>
	</repositories>

	<build>
		<pluginManagement>
			<!-- Set versions of common plugins for reproducibility, ordered alphabetically. -->
			<plugins>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-compiler-plugin</artifactId>
					<version>3.11.0</version>
					<configuration>
						<release>${java.version}</release>
						<showDeprecation>true</showDeprecation>
						<showWarnings>true</showWarnings>
					</configuration>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-surefire-plugin</artifactId>
					<version>3.1.2</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-surefire-report-plugin</artifactId>
					<version>3.1.2</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-site-plugin</artifactId>
					<version>4.0.0-M8</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-dependency-plugin</artifactId>
					<version>3.6.0</version>
					<executions>
						<execution>
							<id>copy-installed</id>
							<phase>install</phase>
							<goals>
								<goal>copy</goal>
							</goals>
							<configuration>
								<artifactItems>
									<artifactItem>
										<groupId>${project.groupId}</groupId>
										<artifactId>${project.artifactId}</artifactId>
										<version>${project.version}</version>
										<type>${project.packaging}</type>
									</artifactItem>
								</artifactItems>
								<stripVersion>true</stripVersion>
								<outputDirectory>${project.parent.build.directory}/${build.output.dir}</outputDirectory>
							</configuration>
						</execution>
						<execution>
							<id>copy-dependencies</id>
							<phase>install</phase>
							<goals>
								<goal>copy-dependencies</goal>
							</goals>
							<configuration>
								<excludeArtifactIds>junit</excludeArtifactIds>
								<stripVersion>true</stripVersion>
								<excludeTransitive>false</excludeTransitive>
								<excludeTypes>war</excludeTypes>
								<excludeScope>provided</excludeScope>
								<outputDirectory>${project.parent.build.directory}/${build.output.dir}/lib</outputDirectory>
							</configuration>
						</execution>
					</executions>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-gpg-plugin</artifactId>
					<version>3.1.0</version>
					<executions>
						<execution>
							<id>sign-artifacts</id>
							<phase>verify</phase>
							<goals>
								<goal>sign</goal>
							</goals>
						</execution>
					</executions>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-jar-plugin</artifactId>
					<version>3.3.0</version>
					<configuration>
						<archive>
							<compress>true</compress>
							<manifestEntries>
								<Version>${project.version}</Version>
								<Package-Version>${package.version}</Package-Version>
								<SCM-Revision>${git.revision}</SCM-Revision>
								<Build-Date>${maven.build.timestamp}</Build-Date>
							</manifestEntries>
							<addMavenDescriptor>false</addMavenDescriptor>
						</archive>
					</configuration>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-javadoc-plugin</artifactId>
					<version>3.5.0</version>
					<executions>
						<execution>
							<id>attach-javadocs</id>
							<goals>
								<goal>jar</goal>
							</goals>
							<configuration>
								<failOnError>false</failOnError>
							</configuration>
						</execution>
					</executions>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-project-info-reports-plugin</artifactId>
					<version>3.4.5</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-resources-plugin</artifactId>
					<version>3.3.1</version>
					<executions>
						<execution>
							<id>copy-license</id>
							<phase>validate</phase>
							<goals>
								<goal>copy-resources</goal>
							</goals>
							<configuration>
								<outputDirectory>${project.build.outputDirectory}/META-INF</outputDirectory>
								<resources>
									<resource>
										<directory>${license.path}</directory>
										<includes>
											<include>LICENSE</include>
										</includes>
									</resource>
								</resources>
							</configuration>
						</execution>
					</executions>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-source-plugin</artifactId>
					<version>3.3.0</version>
					<executions>
						<execution>
							<id>attach-sources</id>
							<goals>
								<goal>jar</goal>
							</goals>
						</execution>
					</executions>
				</plugin>
				<plugin>
					<groupId>ru.concerteza.buildnumber</groupId>
					<artifactId>maven-jgit-buildnumber-plugin</artifactId>
					<version>1.2.10</version>
				</plugin>
			</plugins>
		</pluginManagement>

		<plugins>
			<plugin>
				<groupId>com.github.ferstl</groupId>
				<artifactId>depgraph-maven-plugin</artifactId>
				<version>4.0.2</version>
				<configuration>
					<includes>lect*:*</includes>
					<createImage>true</createImage>
					<imageFormat>pdf</imageFormat>
				</configuration>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
			</plugin>
			<plugin>
				<artifactId>maven-resources-plugin</artifactId>
				<version>3.3.1</version>
				<inherited>false</inherited>
				<executions>
					<!-- Don't copy the license for this parent POM. -->
					<execution>
						<id>copy-license</id>
						<phase>none</phase>
					</execution>
					<execution>
						<id>copy-native</id>
						<phase>validate</phase>
						<goals>
							<goal>copy-resources</goal>
						</goals>
						<configuration>
							<outputDirectory>${project.build.directory}/${build.output.dir}/lib/native</outputDirectory>
							<resources>
								<resource>
									<directory>lib/native/${os.name}</directory>
									<filtering>false</filtering>
								</resource>
							</resources>
						</configuration>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>ru.concerteza.buildnumber</groupId>
				<artifactId>maven-jgit-buildnumber-plugin</artifactId>
				<executions>
					<execution>
						<id>git-buildnumber</id>
						<goals>
							<goal>extract-buildnumber</goal>
						</goals>
						<phase>validate</phase>
					</execution>
				</executions>
			</plugin>
		</plugins>
	</build>

	<profiles>
		<profile>
			<id>release</id>
			<build>
				<plugins>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-source-plugin</artifactId>
					</plugin>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-javadoc-plugin</artifactId>
					</plugin>
					<!-- We want to sign the artifact, the POM, and all attached artifacts. -->
					<!--
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-gpg-plugin</artifactId>
					</plugin>
					-->
				</plugins>
			</build>
		</profile>
		<profile>
			<id>linux-x86_64</id>
			<activation>
				<os>
					<family>unix</family>
					<name>Linux</name>
					<arch>amd64</arch>
				</os>
			</activation>
			<properties>
				<platform.arch>x86_64</platform.arch>
				<platform.name>linux</platform.name>
				<os.name>linux-${platform.arch}</os.name>
			</properties>
		</profile>
		<profile>
			<id>mac-x86_64</id>
			<activation>
				<os>
					<family>mac</family>
					<arch>x86_64</arch>
				</os>
			</activation>
			<properties>
				<platform.arch>x86_64</platform.arch>
				<platform.name>mac</platform.name>
				<os.name>macosx-${platform.arch}</os.name>
			</properties>
		</profile>
		<profile>
			<id>windows-x86_64</id>
			<activation>
				<os>
					<family>windows</family>
					<arch>amd64</arch>
				</os>
			</activation>
			<properties>
				<platform.arch>x86_64</platform.arch>
				<platform.name>windows</platform.name>
				<os.name>windows-${platform.arch}</os.name>
			</properties>
		</profile>
	</profiles>

	<dependencies>
		<dependency>
			<groupId>org.apache.logging.log4j</groupId>
			<artifactId>log4j-api</artifactId>
			<version>${log4j.version}</version>
		</dependency>
		<dependency>
			<groupId>org.apache.logging.log4j</groupId>
			<artifactId>log4j-core</artifactId>
			<version>${log4j.version}</version>
		</dependency>
		<dependency>
			<groupId>org.apache.logging.log4j</groupId>
			<artifactId>log4j-jul</artifactId>
			<version>${log4j.version}</version>
		</dependency>
		<dependency>
			<groupId>org.junit.jupiter</groupId>
			<artifactId>junit-jupiter-api</artifactId>
			<version>5.6.0</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.junit.jupiter</groupId>
			<artifactId>junit-jupiter-engine</artifactId>
			<version>5.6.0</version>
			<scope>test</scope>
		</dependency>
	</dependencies>

</project>
